AC_PREREQ([2.69])
AC_INIT([orchestra_simple_test_project], [1], [foo@bar.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([test.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
